feat(backend): swagger docs for event controllers
